--- a/style.css
+++ b/style.css
@@ -1,4 +1,24 @@
+body{
+   
+    background-image: url(https://media.giphy.com/media/TwiwnEyeKIjeg/giphy.gif);
+    color: orange;
+}
+
+
 h1{
-    font-size:120em;
-    font-family: 'Merriweather', serif;
+    font-size:5em;
+    font-family: 'Anton', sans-serif;
+    text-align: center;
+    text-shadow: 4px black;
+
+}
+p{
+    text-align: center;
+    font-family: 'Noto Serif', serif;
+    font-size: 3em;
+}
+img{
+    display: block;
+ margin: auto;
+
 }
